@@ -7,10 +7,13 @@ osgi.bundles=com.springsource.slf4j.api.jar@start,\
 com.springsource.slf4j.org.apache.commons.logging.jar@start,\
 com.springsource.slf4j.log4j.jar@,\
 ../../logging/target/log4j.configuration-2.0.0-m1-SNAPSHOT.jar,\
-log4j.osgi.jar@start,\
+com.springsource.org.apache.log4j.jar@start,\
 com.springsource.org.aopalliance.jar@start,\
 com.springsource.net.sf.cglib.jar@start,\
+org.springframework.asm.jar@start,\
 org.springframework.aop.jar@start,\
+com.springsource.org.antlr.jar@start,\
+org.springframework.expression.jar@start,\
 org.springframework.beans.jar@start,\
 org.springframework.context.jar@start,\
 org.springframework.context.support.jar@start,\
